--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ distribute = False
 envlist =
     {py27,py35}-django19
     {py27,py35}-django110
+    {py27,py35}-django111
 
 
 [testenv]
@@ -11,6 +12,7 @@ usedevelop = True
 deps =
     django19: Django==1.9.9
     django110: Django==1.10
+    django111: Django==1.11
     pytz
     coverage
 commands =
