--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,28 @@
 [tox]
 distribute = False
 envlist =
-    {py27,py35}-django19
-    {py27,py35}-django110
-    {py27,py35}-django111
+    py{35,36,37}-django20
+    py{35,36,37}-django21
+    py{35,36,37,38,39}-django22
+    py{36,37,38,39}-django30
+    py{36,37,38,39}-django31
+    py{36,37,38,39}-django32
+    py{38,39}-django40
+    py{39}-djangomaster
 
 
 [testenv]
 setenv = DJANGO_SETTINGS_MODULE=actistream.tests.settings
 usedevelop = True
 deps =
-    django19: Django==1.9.9
-    django110: Django==1.10
-    django111: Django==1.11
+    django20: Django==2.0.*
+    django21: Django==2.1.*
+    django22: Django==2.2.*
+    django30: Django==3.0.*
+    django31: Django==3.1.*
+    django32: Django==3.2.*
+    django40: Django==4.0.*
+    djangomaster: https://api.github.com/repos/django/django/tarball/master
     pytz
     coverage
 commands =
