--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
-        django-version: ['master', '2.0', '2.1', '2.2', '3.0', '3.1', '3.2', '4.0']
+        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
+        django-version: ['master', '2.1', '2.2', '3.0', '3.1', '3.2', '4.0']
         exclude:
           - python-version: '3.8'
             django-version: '2.0'
@@ -41,13 +41,22 @@ jobs:
           - python-version: '3.7'
             django-version: '4.0'
 
-          - python-version: '3.5'
-            django-version: 'master'
-          - python-version: '3.6'
-            django-version: 'master'
-          - python-version: '3.7'
-            django-version: 'master'
           - python-version: '3.8'
+            django-version: '4.2'
+          - python-version: '3.9'
+            django-version: '4.2'
+          - python-version: '3.10'
+            django-version: '4.2'
+          - python-version: '3.11'
+            django-version: '4.2'
+
+          - python-version: '3.8'
+            django-version: 'master'
+          - python-version: '3.9'
+            django-version: 'master'
+          - python-version: '3.10'
+            django-version: 'master'
+          - python-version: '3.11'
             django-version: 'master'
 
     steps:
