--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,20 @@
 [tox]
 distribute = False
 envlist =
-    py{35,36,37}-django21
-    py{35,36,37,38,39}-django22
-    py{36,37,38,39}-django30
-    py{36,37,38,39}-django31
-    py{36,37,38,39}-django32
-    py{38,39}-django40
+    py{38,39,310,311}-django40
+    py{38,39,310,311}-django41
     py{38,39,310,311}-django42
-    py{311}-djangomaster
+    py{311}-djangomain
 
 
 [testenv]
 setenv = DJANGO_SETTINGS_MODULE=actistream.tests.settings
 usedevelop = True
 deps =
-    django21: Django==2.1.*
-    django22: Django==2.2.*
-    django30: Django==3.0.*
-    django31: Django==3.1.*
-    django32: Django==3.2.*
     django40: Django==4.0.*
+    django41: Django==4.0.*
     django42: Django==4.2.*
-    djangomaster: https://api.github.com/repos/django/django/tarball/master
+    djangomain: git+https://github.com/django/django.git@main#egg=django
     pytz
     coverage
 commands =
