--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-        django-version: ['master', '4.0', '4.1', '4.2']
+        django-version: ['main', '4.0', '4.1', '4.2']
         exclude:
           - python-version: '3.8'
-            django-version: 'master'
+            django-version: 'main'
           - python-version: '3.9'
-            django-version: 'master'
+            django-version: 'main'
           - python-version: '3.10'
-            django-version: 'master'
+            django-version: 'main'
 
     steps:
     - uses: actions/checkout@v2
